...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_itemview_itemlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner_bg"
        android:divider="@null"
...
        android:background="@drawable/rounded_corner_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/new_task_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/nunitosans_semibold"
            android:hint="@string/task_creation_placeholder"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/new_task_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/new_task_btn"
            android:layout_width="wrap_content"
...
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/layout_update_task_checkbox"
            style="@style/TaskEntryCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/layout_update_task_body"
            style="@style/TaskEntryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:background="@null"
...
            android:layout_marginTop="100dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/layout_update_task_save"
                style="@style/TaskSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/save" />
...
                android:layout_weight="1"
                android:onClick="closeUpdateLayout"
                android:text="@string/undo" />
        </LinearLayout>

        <Button
            android:id="@+id/layout_update_task_delete"
            style="@style/TaskDeleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="removeTask"
            android:text="@string/delete"
...
