...
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="8dp"
    android:background="@android:color/transparent">

    <CheckBox
        android:id="@+id/layout_task_checkbox"
        style="@style/TaskEntryCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-5dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/layout_task_body"
        style="@style/TaskEntryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/layout_task_checkbox"
        android:ellipsize="end" />

    <ImageButton
        android:id="@+id/layout_task_delete_button"
        style="@style/DeleteButtonInRecyclerView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/delete"
...
