<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/date_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunitosans_bold"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_category"
        android:layout_marginTop="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SelectionList.CardView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/child_task_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="layout_task_item" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>