package com.github.steroidteam.todolist;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.clearText;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
import static androidx.test.espresso.matcher.ViewMatchers.isChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.github.steroidteam.todolist.CustomMatchers.atPositionCheckBox;
import static com.github.steroidteam.todolist.CustomMatchers.atPositionCheckText;
import static com.github.steroidteam.todolist.CustomMatchers.atPositionTextContains;
import static com.github.steroidteam.todolist.CustomMatchers.clickChildViewWithId;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.not;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertNull;
import static org.mockito.ArgumentMatchers.any;
import static org.mockito.ArgumentMatchers.anyBoolean;
import static org.mockito.ArgumentMatchers.anyInt;
import static org.mockito.ArgumentMatchers.eq;
import static org.mockito.Mockito.doReturn;
import static org.mockito.Mockito.verify;

import android.Manifest;
import android.app.NotificationManager;
import android.content.Context;
import android.location.Location;
import android.location.LocationListener;
import android.location.LocationManager;
import android.os.SystemClock;
import android.service.notification.StatusBarNotification;
import androidx.annotation.NonNull;
import androidx.fragment.app.testing.FragmentScenario;
import androidx.test.espresso.contrib.RecyclerViewActions;
import androidx.test.espresso.intent.Intents;
import androidx.test.rule.GrantPermissionRule;
import com.github.steroidteam.todolist.broadcast.ReminderDateBroadcast;
import com.github.steroidteam.todolist.broadcast.ReminderLocationBroadcast;
import com.github.steroidteam.todolist.database.Database;
import com.github.steroidteam.todolist.database.DatabaseFactory;
import com.github.steroidteam.todolist.model.todo.Tag;
import com.github.steroidteam.todolist.model.todo.Task;
import com.github.steroidteam.todolist.model.todo.TodoList;
import com.github.steroidteam.todolist.model.todo.TodoListCollection;
import com.github.steroidteam.todolist.view.ItemViewFragment;
import com.github.steroidteam.todolist.viewmodel.ViewModelFactoryInjection;
import java.io.File;
import java.text.SimpleDateFormat;
import java.util.ArrayList;
import java.util.Calendar;
import java.util.Date;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.UUID;
import java.util.concurrent.CompletableFuture;
import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;
import org.mockito.ArgumentCaptor;
import org.mockito.Mock;
import org.mockito.Mockito;
import org.mockito.junit.MockitoJUnitRunner;
import org.ocpsoft.prettytime.nlp.PrettyTimeParser;

@RunWith(MockitoJUnitRunner.class)
public class ItemViewFragmentTest {

    private final int TASK_BODY_LAYOUT_ID = R.id.layout_task_body;
    private final int TASK_BOX_LAYOUT_ID = R.id.layout_task_checkbox;

    private FragmentScenario<ItemViewFragment> scenario;
    @Mock Database databaseMock;

    @Mock Context context;

    @Rule
    public GrantPermissionRule coarseLocationPermissionRule =
            GrantPermissionRule.grant(Manifest.permission.ACCESS_COARSE_LOCATION);

    @Rule
    public GrantPermissionRule fineLocationPermissionRule =
            GrantPermissionRule.grant(Manifest.permission.ACCESS_FINE_LOCATION);

    @Before
    public void initIntents() {
        Intents.init();
    }

    @After
    public void releaseIntents() {
        Intents.release();
    }

    @Before
    public void setUp() {
        // Mock context for Broadcast Reminder
        doReturn(context).when(context).getApplicationContext();

        TodoList todoList = new TodoList("Some random title");
        CompletableFuture<TodoList> todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());

        Task task = new Task("Random task title");
        CompletableFuture<Task> taskFuture = new CompletableFuture<>();
        taskFuture.complete(task);
        doReturn(taskFuture).when(databaseMock).putTask(any(), any(Task.class));
        doReturn(taskFuture).when(databaseMock).updateTask(any(), anyInt(), any(Task.class));
        doReturn(taskFuture).when(databaseMock).removeTask(any(), anyInt());
        doReturn(taskFuture).when(databaseMock).setTaskDone(any(), anyInt(), anyBoolean());
        doReturn(taskFuture).when(databaseMock).removeDoneTasks(any());

        TodoListCollection collection = new TodoListCollection();
        collection.addUUID(UUID.randomUUID());
        CompletableFuture<TodoListCollection> todoListCollectionFuture = new CompletableFuture<>();
        todoListCollectionFuture.complete(collection);
        doReturn(todoListCollectionFuture).when(databaseMock).getTodoListCollection();

        CompletableFuture<List<Tag>> tagsFuture = new CompletableFuture<>();
        tagsFuture.complete(new ArrayList<>());
        doReturn(tagsFuture).when(databaseMock).getAllTags();
        doReturn(tagsFuture).when(databaseMock).getTagsFromIds(any());
        doReturn(tagsFuture).when(databaseMock).getAllTagsIds();
        doReturn(tagsFuture).when(databaseMock).getTagsFromList(any());

        DatabaseFactory.setCustomDatabase(databaseMock);

        File fakeFile = new File("Fake pathname");
        doReturn(fakeFile).when(context).getCacheDir();
        ViewModelFactoryInjection.setCustomTodoListRepo(context, UUID.randomUUID());
        scenario =
                FragmentScenario.launchInContainer(
                        ItemViewFragment.class, null, R.style.AsteroidTheme);
    }

    @Test
    public void createTaskWorks() {
        final String TASK_DESCRIPTION = "Buy bananas";

        TodoList todoList = new TodoList("Some random title");
        /* We should return a new todoList with this task description once we've created it */
        todoList.addTask(new Task(TASK_DESCRIPTION));
        CompletableFuture<TodoList> todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());

        // Type a task description in the "new task" text field.
        onView(withId(R.id.new_task_text)).perform(typeText(TASK_DESCRIPTION), closeSoftKeyboard());

        // Hit the button to create a new task.
        onView(withId(R.id.new_task_btn)).perform(click());

        // The task description text field should now be empty.
        onView(withId(R.id.new_task_text)).check(matches(withText("")));

        onView(withId(R.id.activity_itemview_itemlist))
                .check(matches(hasDescendant(withText(TASK_DESCRIPTION))));
    }

    @Test
    public void cannotCreateTaskWithoutText() {
        // Clear the text input.
        onView(withId(R.id.new_task_text)).perform(clearText());

        // Hit the button to create a new task.
        onView(withId(R.id.new_task_btn)).perform(click());

        onView(withId(R.id.activity_itemview_itemlist)).check(matches(isDisplayed()));
    }

    @Test
    public void cannotRenameTaskWithoutText() {
        final String TASK_DESCRIPTION = "Buy bananas";

        TodoList todoList = new TodoList("Some random title");
        /* We should return a new todoList with this task description once we've created it */
        Task task = new Task(TASK_DESCRIPTION);
        todoList.addTask(task);
        CompletableFuture<TodoList> todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());
        CompletableFuture<Task> taskFuture = new CompletableFuture<>();
        taskFuture.complete(task);
        doReturn(taskFuture).when(databaseMock).getTask(any(), anyInt());

        // Type a task description in the "new task" text field.
        onView(withId(R.id.new_task_text)).perform(typeText(TASK_DESCRIPTION), closeSoftKeyboard());

        // Hit the button to create a new task.
        onView(withId(R.id.new_task_btn)).perform(click());

        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        onView(withId(R.id.layout_update_task_body)).perform(clearText(), closeSoftKeyboard());

        onView(withId(R.id.layout_update_task_save)).perform(click());

        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .check(matches(atPositionCheckText(0, TASK_DESCRIPTION, TASK_BODY_LAYOUT_ID)));

        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .check(matches(atPositionCheckBox(0, false, TASK_BOX_LAYOUT_ID)));
    }

    @Test
    public void datesAreRemovedFromTaskBodyUponCreation() {
        HashMap<String, String> fixtureDates = new HashMap<>();
        fixtureDates.put("Call Sammy today at noon", " today at noon");
        fixtureDates.put("Deliver at 8 PM the package", " at 8 PM");
        fixtureDates.put(
                "The day after tomorrow at 13:00 buy 3 avocados",
                "The day after tomorrow at 13:00 ");

        PrettyTimeParser timeParser = new PrettyTimeParser();

        for (Map.Entry<String, String> entry : fixtureDates.entrySet()) {
            String originalTaskDescription = entry.getKey();
            Task task = new Task(originalTaskDescription.replace(entry.getValue(), ""));

            // Start the view with an empty list.
            TodoList todoList = new TodoList("Some random title");
            todoList.addTask(task);
            CompletableFuture<TodoList> todoListFuture = new CompletableFuture<>();
            todoListFuture.complete(todoList);
            doReturn(todoListFuture).when(databaseMock).getTodoList(any());

            // Type the task description in the "new task" text field.
            onView(withId(R.id.new_task_text))
                    .perform(typeText(originalTaskDescription), closeSoftKeyboard());

            // Hit the button to create a new task.
            onView(withId(R.id.new_task_btn)).perform(click());

            task.setDueDate(timeParser.parse(entry.getValue()).get(0));

            verify(databaseMock).putTask(any(), eq(task));
        }
    }

    @Test
    public void dueDatesAreDisplayed() {
        // Creating all fixture tasks in a single batch and then testing them is a bit more
        // complicated because they will be grouped in different date blocks.
        // Thus, create and test each fixture individually.
        Calendar c;
        List<String> fixtureDates = new ArrayList<>();
        // Start the view with an empty list.
        TodoList todoList = new TodoList("Some random title");
        Task task = new Task("Task");
        todoList.addTask(task);
        CompletableFuture<TodoList> todoListFuture;

        c = Calendar.getInstance();
        c.set(Calendar.HOUR_OF_DAY, 12);
        c.set(Calendar.MINUTE, 0);
        task.setDueDate(c.getTime());
        todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());
        triggerTaskRefresh();
        onView(withId(R.id.activity_itemview_itemlist))
                .check(matches(atPositionTextContains(0, " 12:00")));

        c = Calendar.getInstance();
        // If the current month is December, next month will be also next year and the year will
        // be displayed. Let's make the test deterministic by including that scenario.
        if (c.get(Calendar.MONTH) == Calendar.DECEMBER) {
            c.set(Calendar.MONTH, c.get(Calendar.MONTH) - 1);
        } else {
            c.set(Calendar.MONTH, c.get(Calendar.MONTH) + 1);
        }
        task.setDueDate(c.getTime());
        todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());
        triggerTaskRefresh();
        onView(withId(R.id.activity_itemview_itemlist))
                .check(
                        matches(
                                atPositionTextContains(
                                        0,
                                        new SimpleDateFormat(" MM-dd HH:mm").format(c.getTime()))));

        c = Calendar.getInstance();
        c.set(Calendar.YEAR, c.get(Calendar.YEAR) + 1);
        task.setDueDate(c.getTime());
        todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());
        triggerTaskRefresh();
        onView(withId(R.id.activity_itemview_itemlist))
                .check(
                        matches(
                                atPositionTextContains(
                                        0,
                                        new SimpleDateFormat(" yyyy-MM-dd HH:mm")
                                                .format(c.getTime()))));
    }

    private void triggerTaskRefresh() {
        // Create a random task to refresh the task list.
        onView(withId(R.id.new_task_text)).perform(typeText("Task"), closeSoftKeyboard());
        onView(withId(R.id.new_task_btn)).perform(click());
    }

    @Test
    public void updateTaskWorks() {

        final String TASK_DESCRIPTION = "Buy bananas";
        final String TASK_DESCRIPTION_2 = "Buy cheese";

        TodoList todoList = new TodoList("Some random title");
        /* We should return a new todoList with this task description once we've created it */
        Task originalTask = new Task(TASK_DESCRIPTION);
        todoList.addTask(originalTask);
        CompletableFuture<TodoList> todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());
        CompletableFuture<Task> taskFuture = new CompletableFuture<>();
        taskFuture.complete(originalTask);
        doReturn(taskFuture).when(databaseMock).getTask(any(), anyInt());

        // Type a task description in the "new task" text field.
        onView(withId(R.id.new_task_text)).perform(typeText(TASK_DESCRIPTION), closeSoftKeyboard());

        // Hit the button to create a new task.
        onView(withId(R.id.new_task_btn)).perform(click());

        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .perform(
                        RecyclerViewActions.actionOnItemAtPosition(
                                0, clickChildViewWithId(R.id.layout_task_checkbox)));

        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        // Make sure that the database was called to update the task, and that the updated task
        // is now set as "done".
        Task updatedTask = new Task(originalTask.getBody());
        updatedTask.setDone(true);
        verify(databaseMock).updateTask(any(), anyInt(), eq(updatedTask));

        onView(withId(R.id.layout_update_task_body)).check(matches(withText(TASK_DESCRIPTION)));
        onView(withId(R.id.layout_update_task_checkbox)).check(matches(isChecked()));

        todoList = new TodoList("Some random title");
        /* We should return a new todoList with this task description once we've created it */
        originalTask = new Task(TASK_DESCRIPTION_2);
        originalTask.setDone(false);
        todoList.addTask(originalTask);
        todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());
        taskFuture = new CompletableFuture<>();
        taskFuture.complete(originalTask);
        doReturn(taskFuture).when(databaseMock).getTask(any(), anyInt());

        onView(withId(R.id.layout_update_task_checkbox)).perform(click());
        onView(withId(R.id.layout_update_task_body))
                .perform(clearText(), typeText(TASK_DESCRIPTION_2), closeSoftKeyboard());

        onView(withId(R.id.layout_update_task_save)).perform(click());

        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .check(matches(atPositionCheckText(0, TASK_DESCRIPTION_2, TASK_BODY_LAYOUT_ID)));

        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .check(matches(atPositionCheckBox(0, false, TASK_BOX_LAYOUT_ID)));
    }

    @Test
    public void removeTaskWorks() {
        final String TASK_DESCRIPTION = "Buy bananas";
        final String TASK_DESCRIPTION_2 = "Buy cheese";

        /* First we should return two tasks */
        TodoList todoList = new TodoList("Some random title");
        todoList.addTask(new Task(TASK_DESCRIPTION));
        todoList.addTask(new Task(TASK_DESCRIPTION_2));
        CompletableFuture<TodoList> todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());

        // Type a task description in the "new task" text field.
        onView(withId(R.id.new_task_text)).perform(typeText(TASK_DESCRIPTION), closeSoftKeyboard());

        // Hit the button to create a new task.
        onView(withId(R.id.new_task_btn)).perform(click());

        onView(withId(R.id.new_task_text))
                .perform(typeText(TASK_DESCRIPTION_2), closeSoftKeyboard());

        onView(withId(R.id.new_task_btn)).perform(click());

        /* Then we should return one task */
        todoList = new TodoList("Some random title");
        Task task = new Task(TASK_DESCRIPTION_2);
        todoList.addTask(task);
        todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());
        CompletableFuture<Task> taskFuture = new CompletableFuture<>();
        taskFuture.complete(task);
        doReturn(taskFuture).when(databaseMock).getTask(any(), anyInt());

        // Try to remove the first task
        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .perform(
                        RecyclerViewActions.actionOnItemAtPosition(
                                0, clickChildViewWithId(R.id.layout_task_checkbox)));
        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .perform(
                        RecyclerViewActions.actionOnItemAtPosition(
                                0, clickChildViewWithId(R.id.layout_task_delete_button)));

        // after deleting the first item we check that we have the second one at position 0.
        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .check(matches(atPositionCheckText(0, TASK_DESCRIPTION_2, TASK_BODY_LAYOUT_ID)));
    }

    @Test
    public void removeTaskWorksInUpdateLayout() {
        final String TASK_DESCRIPTION = "Buy bananas";
        final String TASK_DESCRIPTION_2 = "Buy cheese";

        TodoList todoList = new TodoList("Some random title");
        todoList.addTask(new Task(TASK_DESCRIPTION_2));
        CompletableFuture<TodoList> todoListFuture = new CompletableFuture<>();
        todoListFuture.complete(todoList);
        doReturn(todoListFuture).when(databaseMock).getTodoList(any());

        // Type a task description in the "new task" text field.
        onView(withId(R.id.new_task_text)).perform(typeText(TASK_DESCRIPTION), closeSoftKeyboard());

        // Hit the button to create a new task.
        onView(withId(R.id.new_task_btn)).perform(click());

        onView(withId(R.id.new_task_text))
                .perform(typeText(TASK_DESCRIPTION_2), closeSoftKeyboard());

        onView(withId(R.id.new_task_btn)).perform(click());

        // Try to remove the first task
        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
                                                .atPosition(0))))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        onView(withId(R.id.layout_update_task_body)).perform(closeSoftKeyboard());

        onView(withId(R.id.layout_update_task_delete)).perform(click());

        onView(
                        allOf(
                                withId(R.id.child_task_recycler_view),
                                isDescendantOfA(
                                        new RecyclerViewMatcher(R.id.activity_itemview_itemlist)
